--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           Group of Architects
         </h1>
         <p class="banner-p">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, eum
-          magni quae. Error quidem recusandae maiores eveniet corporis quae
-          <br />
-          obcaecati veritatis, architecto dolores earum! At, tempora!
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in <br />
+          some form, by injected humour, or randomised words which don't look
+          even
         </p>
         <button class="banner-btn">Explore More</button>
 
